--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite": "^2.3.0",
     "flowbite-vue": "^0.1.3",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
