--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vee-validate/yup": "^4.12.6",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "emotion": "^10.0.27",
@@ -17,8 +18,10 @@
     "pinia-plugin-persistedstate": "^3.2.1",
     "postcss": "^8",
     "tailwindcss": "^3",
+    "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
