feat allow user to post #8

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vee-validate/yup": "^4.12.6",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.10",
     "emotion": "^10.0.27",
     "flowbite": "^2.3.0",
     "flowbite-vue": "^0.1.3",
