--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^3",
     "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
+    "vue-3-linkify": "^1.1.0",
     "vue-router": "^4.3.0",
     "yup": "^1.4.0"
   },
